<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot_bt_sim</name>
  <version>0.0.0</version>
  <description>Gazebo simulation of TurtleBot3 orchestrated by a BehaviorTree.CPP mission node.</description>
  <maintainer email="mouradlatoundji@gmail.com">mlatoundji</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>behaviortree_cpp</depend>

  <!-- External simulation and robot packages (assumed installed in another workspace) -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


